# shape-modeling

./: .gitignore  MLPimplicit3D.py  MLPimplicit3D_mlx.py  README.md  pyproject.toml  show_mesh.py  show_mesh_trimesh.py  voxcarv3D.py
