[project]
name = "04-3d-shape-modeling-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "mlx>=0.30.3",
    "mlx-lm>=0.29.1",
    "numpy>=2.4.1",
    "scikit-image>=0.26.0",
    "torch>=2.9.1",
    "trimesh>=4.11.0",
]
